@@ -83,7 +83,7 @@
     <git-commit-id-plugin.version>2.2.3</git-commit-id-plugin.version>
     <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
     <spring-cloud-contract.version>2.0.0.M8</spring-cloud-contract.version>
-    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
     <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
@@ -93,6 +93,7 @@
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     <asciidoctor.version>1.5.6</asciidoctor.version>
+    <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>        
   </properties>
 
   <modules>
@@ -137,7 +138,6 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
-<!--             <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>        -->
             <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>       
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <failIfNoTests>false</failIfNoTests>
@@ -191,7 +191,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>${maven-deploy-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
